--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset=utf-8 />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 
-    <title>Wine &amp; Cheese Map</title>
-    <meta name="Description" CONTENT="An interactive visualisation to explore wine and cheese pairings">
+    <title>Nodariety</title>
+    <meta name="Description" CONTENT="What's named after who (two).">
 
     <link href="dist/bundle.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="icon.png">
@@ -13,7 +13,7 @@
   <body>
     <div id="loader" class="loader">
       <div class="loader-icon"></div>
-      <h1>Wine &amp; Cheese Map</h1>
+      <h1>Nodariety</h1>
     </div>
 
     <script src="dist/polyfills.js"></script>
